removing overflow-x on the header background to ensure it runs a 100%

--- a/assets/styles/layout/header/_header.scss
+++ b/assets/styles/layout/header/_header.scss
@@ -16,7 +16,6 @@
 	align-items: center;
 	width: 100%;
 	height: var( --header-height );
-	overflow-x: hidden;
 
 	&::after {
 		content: "";
